# pascal-1981

./: .gitignore  MANIFEST.in  README.md  ast_nodes.py  builtins_registry.py  codegen_llvm.py  compile_to_llvm.py  features.py  lexer.py  parser.py  pyproject.toml  setup.py  symbol_table.py  test_semantic.py  test_type_checker.py  type_checker.py  type_system.py
codegen/: __init__.py  base.py  constfold.py  decls.py  exprs.py  files.py  io_write_read.py  runtime_builtins.py  sets.py  stmts.py  strings.py  types_map.py
docker/: Dockerfile  README.md
docs/: DESIGN.md  Grand_Unified_Checklist.md  ads-implementation-plan.md  ads-memory-spaces-design.md  c-abi-foreign-functions.md  command-line-support.md  cuda-kernel-prescription.md  device-build-cleanup-plan.md  device-kernel-orientation.md  device-unit-migration-checklist.md  device-unit-phase1-review-notes.md  discrepancies-remediation-plan.md  discrepancies.md  ebnf_grammar.md  followups.md  mandelbrot-gaps.md  mandelbrot-ptx-substitution-plan.md  milestone-c-parallel-execution-plan.md  super-array-bounds-abi.md  tuning-hints.md
pascal_test_suite/: README.md  run_suite.sh
runtime/: Makefile  cmdline.c  cpu_device_shim.c  cuda_launch.c  encode_decode.c  fileops.c  fillc.c  fillsc.c  movel.c  mover.c  movesl.c  movesr.c  pabort.c  pascalrt.h  positn.c  readq.c  scaneq.c
scripts/: beautify.sh  build-cuda-host.sh  shell.sh  tidy.sh  wheel.sh
tests/: __init__.py  support.py  test_ads_space.py  test_ads_space_check.py  test_ads_space_codegen.py  test_ads_space_parse.py  test_ads_space_step4b.py  test_byte_types.py  (+51 more)
(+158 files in other folders)
