[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pascal1981"
version = "1.0.0"
description = "Pascal-1981: a Pascal compiler targeting LLVM IR (faithful IBM Pascal 2.0 dialect)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "llvmlite>=0.40",
]

[project.scripts]
pascal1981 = "pascal1981.compile_to_llvm:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pascal1981", "pascal1981.codegen"]
include-package-data = true

[tool.setuptools.package-data]
pascal1981 = ["libpascalrt.a"]
